--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:targetApi="31">
         <activity
             android:name=".Activity.SignupActivity"
-            android:exported="false">
+            android:exported="false" android:parentActivityName=".Activity.SigninActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -26,7 +26,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
